Project

General

Profile

Actions

Bug #23298

closed

filestore: do_copy_range replay bad return value

Added by Sage Weil about 6 years ago. Updated about 6 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

+ if (r < 0 && replaying) {
+ assert(r == -ERANGE);
+ derr << "Filestore: short source tolerated because we are replaying" << dendl;
+ r = pos - from;;
+ }

pos is an offset, from is an fd.

/a/sage-2018-03-09_22:32:43-rados-wip-sage2-testing-2018-03-09-1346-distro-basic-smithi/2272809/remote/smithi094/idempotent_failure


Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #23351: luminous: filestore: do_copy_range replay bad return valueResolvedPrashant DActions
Actions #2

Updated by Sage Weil about 6 years ago

  • Description updated (diff)
Actions #3

Updated by Sage Weil about 6 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Nathan Cutler about 6 years ago

  • Copied to Backport #23351: luminous: filestore: do_copy_range replay bad return value added
Actions #5

Updated by Nathan Cutler about 6 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF