os/filestore: fix do_copy_range replay bug

The 'from' value is an fd, not an offset.  We want 'r' to be the number of
bytes copied, or len.

It looks like this has been broken since 9499cdcd87ddac4a91abffe401baddb91f8a11d5

Fixes: http://tracker.ceph.com/issues/23298
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit df7fa174ad604822c034226593ff1eb700506e4a)